[gd_scene load_steps=3 format=3 uid="uid://drjwpqtr84fvl"]

[ext_resource type="Script" uid="uid://18xxrf6mq0ib" path="res://scripts/splash/s_splashscreen.gd" id="1_nxqhs"]
[ext_resource type="FontFile" uid="uid://b0gcltl4vk2ck" path="res://fonts/VCR_OSD_MONO_1.001.ttf" id="3_5ymta"]

[node name="s_splashscreen" type="Node"]
script = ExtResource("1_nxqhs")

[node name="ui" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="bg" type="ColorRect" parent="ui"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0674377, 0.0674377, 0.0674377, 1)

[node name="labels" type="Control" parent="ui"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="made by j0o0ll" type="RichTextLabel" parent="ui/labels"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -4.5
offset_right = 75.0
offset_bottom = 4.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_constants/shadow_outline_size = 1
theme_override_fonts/normal_font = ExtResource("3_5ymta")
theme_override_font_sizes/normal_font_size = 10
theme_override_font_sizes/bold_font_size = 10
bbcode_enabled = true
text = "um jogo produzido por 

[color=teal][b][ J0o0ll ][/b][/color]"
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="made with godot" type="RichTextLabel" parent="ui/labels"]
visible = false
custom_minimum_size = Vector2(150, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -4.5
offset_right = 0.5
offset_bottom = 4.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_constants/shadow_outline_size = 1
theme_override_fonts/normal_font = ExtResource("3_5ymta")
theme_override_font_sizes/normal_font_size = 10
theme_override_font_sizes/bold_font_size = 10
bbcode_enabled = true
text = "feito com a 

[color=royalblue][b][ GODOT GAME ENGINE ][/b][/color]"
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="music by TheRealSwirls" type="RichTextLabel" parent="ui/labels"]
visible = false
custom_minimum_size = Vector2(150, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -4.5
offset_right = 0.5
offset_bottom = 4.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_constants/shadow_outline_size = 1
theme_override_fonts/normal_font = ExtResource("3_5ymta")
theme_override_font_sizes/normal_font_size = 10
theme_override_font_sizes/bold_font_size = 10
bbcode_enabled = true
text = "m√∫sicas feitas por

[color=slategray][b][ TheRealSwirls ][/b][/color]"
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="splash_timer" type="Timer" parent="."]

[node name="text_timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="text_timer" to="." method="_on_text_timer_timeout"]
